# Live-Backtester

./: CMakeLists.txt  README.md  main.cpp
config/: config_loader.hpp
core/analytics/: factor_attribution.hpp  performance_metrics.hpp  trade_analysis.hpp
core/engine/: backtest_engine.hpp  event_loop.hpp  live_shadow_engine.hpp  simulator_clock.hpp
core/execution/: order.hpp  order_manager.hpp  portfolio.hpp  slippage_model.hpp
core/market/: historical_data_loader.hpp  live_data_stream.hpp  market_data_feed.hpp  tick_data.hpp
core/risk/: drawdown_monitor.hpp  position_sizer.hpp  risk_limits.hpp
core/strategy/: istrategy.hpp  strategy_factory.hpp
core/strategy/built_in/: sma_crossover.cpp
core/utils/: latency_simulator.hpp  logging.hpp  thread_pool.hpp  time_utils.hpp
data/: binance_loader.cpp  csv_parser.cpp  data_normalizer.hpp  parquet_loader.cpp  sample_ticks_with_trades.csv
docs/: backtesting_methodology.md  user_guide.md
scripts/: generate_report.py
tests/: test_data_loader.cpp  test_engine.cpp  test_order_matching.cpp  test_strategy.cpp
